--- a/AnelesAndroidProjects/app/src/main/res/layout/item_project.xml
+++ b/AnelesAndroidProjects/app/src/main/res/layout/item_project.xml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="12dp"
+    app:cardCornerRadius="6dp"
+    app:cardElevation="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/image_view_project_icon"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view_project_icon_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="12dp"
-            android:contentDescription="@string/image_content_description"
-            android:src="@drawable/ic_launcher_background" />
+            app:cardCornerRadius="6dp"
+            app:cardElevation="0dp">
+
+            <ImageView
+                android:id="@+id/image_view_project_icon"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:contentDescription="@string/image_content_description"
+                android:scaleType="centerCrop"
+                tools:src="@drawable/ic_launcher_background" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/text_view_project_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/image_view_project_icon"
-            android:layout_toEndOf="@id/image_view_project_icon"
+            android:layout_alignTop="@id/card_view_project_icon_container"
+            android:layout_toEndOf="@id/card_view_project_icon_container"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="#222"
+            android:textSize="18sp"
             tools:text="The App title" />
 
         <TextView
@@ -30,7 +47,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_project_title"
             android:layout_marginTop="4dp"
-            android:layout_toEndOf="@id/image_view_project_icon"
+            android:layout_toEndOf="@id/card_view_project_icon_container"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#888"
+            android:textSize="14sp"
             tools:text="This will be our description of the project" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
