--- a/MyBucketList/app/src/main/res/layout/items.xml
+++ b/MyBucketList/app/src/main/res/layout/items.xml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item"
-    android:layout_marginVertical="10dp"
-    app:cardElevation="0dp">
+    android:layout_marginVertical="20dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </RelativeLayout>
-    <TextView
-        tools:text="Salad"
-        android:textSize="18sp"
-        android:id="@+id/item_description"
+    <androidx.cardview.widget.CardView
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-</androidx.cardview.widget.CardView>
+        android:layout_height="wrap_content"
+        app:cardElevation="0dp">
+        <RelativeLayout
+            android:background="#E2DC72"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/image_view_bucket_list_photo"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@string/bucket_list_image"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher_background" />
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/text_view_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_toEndOf="@id/image_view_bucket_list_photo"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                tools:text="Bowling" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
