--- a/TheShamelessSelfPromoApp/app/src/main/res/layout/activity_main.xml
+++ b/TheShamelessSelfPromoApp/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
             android:text="Include 'junior'" />
 
         <Spinner
+            android:id="@+id/spinner_job_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
