--- a/selfpromoapp2/app/src/main/res/layout/activity_preview.xml
+++ b/selfpromoapp2/app/src/main/res/layout/activity_preview.xml
@@ -32,5 +32,5 @@
         android:layout_marginTop="24dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SEND MESSAGE" />
+        android:text="@string/button_text_send" />
 </LinearLayout>
