Successfully passing most of the data to summary activity, adapter WIP

--- a/UserRegistrationApp/app/src/main/res/layout/activity_main.xml
+++ b/UserRegistrationApp/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Spinner
+
             android:id="@+id/spinner_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,6 +31,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:hint="First Name">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -41,6 +43,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:hint="Last Name">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -52,6 +55,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:hint="Email">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -62,6 +66,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
             android:layout_height="wrap_content"
             android:hint="Cell Number">
 
@@ -74,6 +79,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:hint="password">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_password"
@@ -82,6 +88,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:layout_marginTop="20dp"
             android:id="@+id/button_preview_details"
             android:layout_gravity="center_horizontal"
             android:text="PREVIEW DETAILS"
