--- a/UserRegistrationApp/app/src/main/res/layout/activity_summary.xml
+++ b/UserRegistrationApp/app/src/main/res/layout/activity_summary.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:background="@drawable/gradient_background"
@@ -15,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:text="SUMMARY"
+        android:text="@string/activity_summary_heading"
         android:textAlignment="center"
         android:textSize="24sp" />
 
